<resources>
    <string name="app_name">LV-AdministrarAlumnos</string>
    <string name="agregar">Agregar</string>
    <string name="consulta_por_carnet">Consulta por carnet</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificar">Modificar</string>
    <string name="ingrese_el_carnet">Ingrese el carnet</string>
    <string name="ingrese_el_nombre">Ingrese el nombre</string>
    <string name="ingrese_el_apellido">Ingrese el apellido</string>
    <string name="ingrese_la_edad">ingrese la edad</string>
    <string name="carnet">Carnet</string>
    <string name="apellidos">Apellidos</string>
    <string name="edad">Edad</string>
</resources>