<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button3"
        android:layout_width="279dp"
        android:layout_height="0dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="80dp"
        android:text="@string/eliminar"
        android:onClick="eliminar"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="279dp"
        android:layout_height="0dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="75dp"
        android:text="@string/modificar"
        android:onClick="modificar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="23dp"
        android:autofillHints=""
        android:ems="10"

        android:hint="@string/ingrese_el_carnet"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingrese_el_apellido"
        android:inputType="text"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="23dp"
        android:text="@string/carnet"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="6dp"
        android:ems="10"
        android:hint="@string/ingrese_el_nombre"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="12dp"
        android:text="@string/apellidos"
        app:layout_constraintBottom_toTopOf="@+id/editTextText3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:text="@string/edad"
        app:layout_constraintBottom_toTopOf="@+id/editTextText4"
        app:layout_constraintStart_toStartOf="@+id/editTextText3"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/ingrese_la_edad"

        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:text="Nombres"
        app:layout_constraintBottom_toTopOf="@+id/editTextText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button"
        android:layout_width="279dp"
        android:layout_height="0dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="9dp"
        android:text="@string/agregar"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4"
        tools:ignore="TouchTargetSizeCheck"
        android:onClick="agregar"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="279dp"
        android:layout_height="0dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="9dp"
        android:text="@string/consulta_por_carnet"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="TouchTargetSizeCheck"
        android:onClick="consulta"/>
</androidx.constraintlayout.widget.ConstraintLayout>